Added default value for tomcat-home
Signed-off-by: Niklas Ekman <niklas.ekman@redpill-linpro.com>

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <module.id>${project.artifactId}</module.id>
     <webapp.name>alfresco</webapp.name>
+    <tomcat.home>tomcat-home</tomcat.home>
   </properties>
 
   <repositories>
