--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.redpill-linpro.alfresco</groupId>
   <artifactId>alfresco-base</artifactId>
-  <version>3.4.3-enterprise</version>
+  <version>3.4.3.2-enterprise</version>
   <packaging>pom</packaging>
   <name>Redpill Linpro Alfresco Base Super POM</name>
   <description>The Super POM for all RLP based Alfresco projects  </description>
@@ -1555,6 +1555,7 @@
                   <include>**/faces-config.xml</include>
                   <include>**/*.png</include>
                   <include>**/*.css</include>
+                  <include>**/*.js</include>
                 </includes>
               </configuration>
             </execution>
@@ -1701,7 +1702,6 @@
                   <exclude>**/*-min.css</exclude>
                   <exclude>**/WEB-INF/**</exclude>
                   <exclude>**/tiny_mce/**</exclude>
-                  <exclude>**/yui/**</exclude>
                   <exclude>**/log4javascript*.js</exclude>
                 </excludes>
                 <includes>
