--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.redpill-linpro.alfresco</groupId>
   <artifactId>alfresco-base</artifactId>
-  <version>4.0.d-community</version>
+  <version>3.4.6.9-enterprise</version>
   <packaging>pom</packaging>
   <name>Redpill Linpro Alfresco Base Super POM</name>
   <description>The Super POM for all RLP based Alfresco projects  </description>
@@ -78,7 +78,7 @@
     <dependency>
       <groupId>com.redpill-linpro.alfresco</groupId>
       <artifactId>alfresco-sdk</artifactId>
-      <version>4.0.d-community</version>
+      <version>3.4.6.9-enterprise</version>
        <scope>provided</scope>
     </dependency>
   </dependencies>
@@ -181,7 +181,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>2.3.1</version>
+          <version>2.4</version>
           <executions>
             <execution>
               <id>default</id>
@@ -313,7 +313,7 @@
         <plugin>
           <groupId>org.apache.cxf</groupId>
           <artifactId>cxf-codegen-plugin</artifactId>
-          <version>2.1.2</version>
+          <version>2.2.2</version>
           <configuration>
             <sourceRoot>${project.build.directory}/generated/cxf</sourceRoot>
           </configuration>
@@ -407,7 +407,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.1</version>
+        <version>2.2.2</version>
         <configuration>
           <goals>deploy</goals>
         </configuration>
