--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
       <groupId>com.redpill-linpro.alfresco</groupId>
       <artifactId>alfresco-sdk</artifactId>
       <version>3.4.6.17-enterprise</version>
-       <scope>provided</scope>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
@@ -328,7 +328,7 @@
         <plugin>
           <groupId>net.alchim31.maven</groupId>
           <artifactId>yuicompressor-maven-plugin</artifactId>
-          <version>1.1</version>
+          <version>1.3.0</version>
           <executions>
             <execution>
               <id>minimize-javascript</id>
@@ -344,10 +344,6 @@
                   <exclude>**/tiny_mce/**</exclude>
                   <exclude>**/log4javascript*.js</exclude>
                 </excludes>
-                <includes>
-                  <include>**/*.js</include>
-                  <include>**/*.css</include>
-                </includes>
                 <webappDirectory>${project.build.directory}/${project.build.finalName}/web</webappDirectory>
                 <force>true</force>
                 <statistics>false</statistics>
@@ -355,6 +351,9 @@
               </configuration>
             </execution>
           </executions>
+          <configuration>
+            <preProcessAggregates>true</preProcessAggregates>
+          </configuration>
         </plugin>
 
         <!-- If using JRebel, this is a good config -->
@@ -381,7 +380,7 @@
 
     <resources>
       <resource>
-        <filtering>true</filtering>
+        <filtering>false</filtering>
         <directory>src/main/resources</directory>
       </resource>
 
