Added aop.xml to the .jar packaging
Signed-off-by: Niklas Ekman <niklas.ekman@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,7 @@
                   <include>**/*.png</include>
                   <include>**/*.css</include>
                   <include>**/*.ts</include>
+                  <include>**/aop.xml</include>
                 </includes>
               </configuration>
             </execution>
