--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.redpill-linpro.alfresco</groupId>
 	<artifactId>alfresco-base</artifactId>
-	<version>1.0.1.0</version>
+	<version>1.0.1.1</version>
 	<packaging>pom</packaging>
 	<name>Redpill Linpro Alfresco Parent POM</name>
 	<description>The Parent POM for all RLP based Alfresco projects</description>
@@ -517,7 +517,37 @@
 				</plugins>
 			</build>
 		</profile>
-
+		
+		<profile>
+			<id>upload</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>com.redpill-linpro.alfresco</groupId>
+						<artifactId>artifact-upload-plugin</artifactId>
+						<version>1.0.0</version>
+						<executions>
+							<execution>
+								<id>artifact-upload</id>
+								<phase>install</phase>
+								<goals>
+									<goal>upload</goal>
+								</goals>
+								<inherited>true</inherited>
+							</execution>
+						</executions>
+						<configuration>
+							<username>${artifact-upload.username}</username>
+							<password>${artifact-upload.password}</password>
+							<site>${artifact-upload.site}</site>
+							<url>${artifact-upload.cmis.url}</url>
+							<path>${artifact-upload.client.upload.path}</path>
+							<overwrite>true</overwrite>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 
 	</profiles>
 
