--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.redpill-linpro.alfresco</groupId>
   <artifactId>alfresco-base</artifactId>
-  <version>1.0.1.4</version>
+  <version>1.0.1.5</version>
   <packaging>pom</packaging>
   
   <name>Redpill Linpro Alfresco Parent POM</name>
@@ -221,26 +221,27 @@
             <goals>
               <goal>compress</goal>
             </goals>
-            <configuration>
-              <excludes>
-                <exclude>${project.basedir}/src/main/amp/config/**/*.js</exclude>
-                <exclude>${project.build.directory}/**/*.js</exclude>
-                <exclude>**/target/**</exclude>
-                <exclude>**/*-min.js</exclude>
-                <exclude>**/*-min.css</exclude>
-                <exclude>**/WEB-INF/**</exclude>
-                <exclude>**/tiny_mce/**</exclude>
-                <exclude>**/log4javascript*.js</exclude>
-              </excludes>
-              <webappDirectory>${project.build.directory}/${project.build.finalName}/web</webappDirectory>
-              <force>true</force>
-              <statistics>false</statistics>
-              <jswarn>false</jswarn>
-            </configuration>
           </execution>
         </executions>
         <configuration>
+          <excludes>
+            <exclude>${project.basedir}/src/main/amp/config/**/*.js</exclude>
+            <exclude>${project.build.directory}/**/*.js</exclude>
+            <exclude>**/target/**</exclude>
+            <exclude>**/*-min.js</exclude>
+            <exclude>**/*-min.css</exclude>
+            <exclude>**/WEB-INF/**</exclude>
+            <exclude>**/tiny_mce/**</exclude>
+            <exclude>**/log4javascript*.js</exclude>
+          </excludes>
+          <sourceDirectory>${project.basedir}/src/main/amp/web</sourceDirectory>
+          <outputDirectory>${project.build.directory}/${project.build.finalName}/web</outputDirectory>
+          <force>true</force>
+          <statistics>false</statistics>
+          <jswarn>false</jswarn>
+          <encoding>UTF-8</encoding>
           <preProcessAggregates>true</preProcessAggregates>
+          <excludeResources>true</excludeResources>
         </configuration>
       </plugin>
     </plugins>
@@ -446,7 +447,7 @@
                   <goal>refresh</goal>
                 </goals>
                 <configuration>
-                  <url>http://${tomcat.host}:${tomcat.port}/${alfresco.client.war}/service/</url>
+                  <url>http://${tomcat.host}:${tomcat.port}/${alfresco.client.war}/service/index</url>
                   <password>admin</password>
                 </configuration>
               </execution>
