--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <env>local</env>
     <tomcat.host>localhost</tomcat.host>
     <tomcat.port>8080</tomcat.port>
+
   </properties>
 
   <developers>
@@ -333,6 +334,7 @@
                     <includes>
                       <include>**/*.*</include>
                     </includes>
+                    <filtering>true</filtering>
                   </resource>
                 </resources>
               </configuration>
@@ -351,6 +353,7 @@
                     <includes>
                       <include>**/*</include>
                     </includes>
+                    <filtering>true</filtering>
                   </resource>
                 </resources>
               </configuration>
@@ -369,6 +372,7 @@
                     <includes>
                       <include>rebel.xml</include>
                     </includes>
+                    <filtering>true</filtering>
                   </resource>
                 </resources>
               </configuration>
@@ -398,6 +402,9 @@
   <profiles>
     <profile>
       <id>dev</id>
+      <properties>
+        <alfresco.webapp.name>alfresco</alfresco.webapp.name>
+      </properties>
       <build>
         <plugins>
           <plugin>
