--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.redpill-linpro.alfresco</groupId>
   <artifactId>alfresco-base</artifactId>
-  <version>1.1.1.0</version>
+  <version>1.1.1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   
   <name>Redpill Linpro Alfresco Parent POM</name>
@@ -177,6 +177,15 @@
   <build>
     <finalName>${project.artifactId}-${project.version}</finalName>
     <plugins>
+      <!-- Use the jgitflow for enabling Git Flow release workflow -->
+      <plugin>
+        <groupId>com.atlassian.maven.plugins</groupId>
+        <artifactId>maven-jgitflow-plugin</artifactId>
+        <version>1.0-alpha26</version>
+        <configuration>
+                <!-- see goals wiki page for configuration options -->
+        </configuration>
+      </plugin>
       <!-- Override surefire configuration to allow for integration testing -->
       <!-- <plugin> <artifactId>maven-surefire-plugin</artifactId> <configuration> <excludes> <exclude>**/IntTest*.java</exclude> </excludes> </configuration> </plugin> -->
       <plugin>
@@ -617,8 +626,8 @@
         <plugins>
           <plugin>
             <groupId>com.redpill-linpro.alfresco</groupId>
-            <artifactId>artifact-upload-plugin</artifactId>
-            <version>1.0.0</version>
+            <artifactId>artifact-upload-maven-plugin</artifactId>
+            <version>1.0.1</version>
             <executions>
               <execution>
                 <id>artifact-upload</id>
