--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.redpill-linpro.alfresco</groupId>
   <artifactId>alfresco-base</artifactId>
-  <version>1.1.1.4-SNAPSHOT</version>
+  <version>1.1.1.4</version>
   <packaging>pom</packaging>
   
   <name>Redpill Linpro Alfresco Parent POM</name>
@@ -188,9 +188,9 @@
             </goals>
             <configuration>
               <properties>
-                <jacoco.agent.arg></jacoco.agent.arg>
-                <jacoco-it.agent.arg></jacoco-it.agent.arg>
-                <jacoco-ft.agent.arg></jacoco-ft.agent.arg>
+                <jacoco.agent.arg />
+                <jacoco-it.agent.arg />
+                <jacoco-ft.agent.arg />
               </properties>
             </configuration>
           </execution>
