--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <spring.framework.version>3.0.5.RELEASE</spring.framework.version>
-    <failsafe.argLine></failsafe.argLine>
+    <failsafe.argLine />
   </properties>
 
   <developers>
