Cleaned out dependencies which were imported into the amps

--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,7 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
       <version>${spring.framework.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
